# tdex-dashboard

./: .eslintignore  .eslintrc.json  .gitignore  .prettierignore  Caddyfile  Dockerfile  Dockerfile.proxy  Dockerfile.web  LICENSE  Makefile  README.md  asset-manifest.json  buf.gen.yaml  buf.work.yaml  buf.yaml  craco.config.js  craco.config.ts  docker-compose.yml  go.mod  go.sum  index.html  jest.config.js  latest.json  manifest.json  package.json  proxy-entrypoint.sh  proxy.Dockerfile  rpc_proxy.go  tailwind.config.js  tdex-run  tsconfig.json  web-entrypoint.sh  web.Dockerfile
.github/workflows/: main.yml  publish.yml  release-docker-dashboard.yml  release-docker-rpcproxy.yml  release-docker.yml  release-tauri.yml  release.yml  v2.yml
public/: index.html  manifest.json
scripts/: build-proxy  compile-proto-js  cross-build-proxy  get-proto-files  run-ocean  tdex-clean  tdex-proxy-clean  tdex-run  tdex-run-init  tdex-run-init-notls  tdex-run-insecure  tdex-run-notls  tdex-run-testnet  tdexd-clean  tdexd-run  tdexd-run-initialized
src/: App.svelte  App.tsx  connect.svelte  grpcDevTool.ts  index.css  index.tsx  tauri-apis.ts
src-tauri/: Cargo.toml  tauri.conf.json  updater.json
src-tauri/.cargo/: config.toml
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src/api-spec/: buf.yaml  operator.proto  types.proto  wallet.proto  walletunlocker.proto
src/app/: config.ts  hooks.ts  rootReducer.ts  store.ts
src/assets/styles/: antd.customize.less  breadcrumb.less  button.less  colors.less  fonts.less  header.less  icon.less  index.less  (+7 more)
src/domain/: asset.ts  currency.ts  helpers.ts  market.ts  misc.ts
src/features/: liquid.api.ts  rates.api.ts  tdex.api.ts
src/hooks/: useExponentialInterval.ts  useInterval.tsx
src/routes/: constants.ts  index.tsx
src/utils/: asset.ts  capitalize.ts  connect.ts  constants.ts  index.ts  proxy.ts  rtk.ts  sleep.ts  snippets.ts  storage.ts  timeAgo.ts  unitConvert.spec.ts  unitConvert.ts
static/css/: 2.7739ed11.chunk.css  2.7739ed11.chunk.css.map  main.7a5298be.chunk.css  main.7a5298be.chunk.css.map  main.d730071b.css  main.d730071b.css.map  main.f74755a1.css  main.f74755a1.css.map
static/js/: 2.99b5ef3c.chunk.js  2.99b5ef3c.chunk.js.LICENSE.txt  main.beb6bca8.chunk.js  main.beb6bca8.chunk.js.map  main.c1770ff9.js  main.c1770ff9.js.LICENSE.txt  main.e9afb9e0.js  runtime-main.7a8277cd.js  runtime-main.7a8277cd.js.map
(+189 files in other folders)
