
[build-dependencies]

  [build-dependencies.tauri-build]
    features = []
    version = "1.0.0-rc.5"

[dependencies]
  serde_json = "1.0"

  [dependencies.serde]
    features = ["derive"]
    version = "1.0"

  [dependencies.tauri]
    features = ["fs-all", "path-all", "process-exit", "shell-all"]
    version = "1.0.0-rc.6"

[features]
  custom-protocol = ["tauri/custom-protocol"]
  default = ["custom-protocol"]

[package]
  authors = ["TDEX Network Team"]
  build = "src/build.rs"
  default-run = "tdex-dashboard"
  description = "Tdex Dashboard"
  edition = "2021"
  license = ""
  name = "tdex-dashboard"
  repository = "https://github.com/tdex-network/tdex-dashboard"
  version = "0.1.23"
